src/test/resources/acceptance/accept/singleUppercaseId.ul
int A ()
{
}

void B ()
{
}

float C ()
{
}
