src/test/resources/reject/multipleParametersNoComma.ul
int bar (int p1 int p2)
{
}
